<resources>
    <string name="app_name">CalcApp</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="multiplication">*</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="dividing">/</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="subtract">-</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="addition">+</string>
    <string name="number_0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="digit_place">0</string>
    <string name="settings">Settings</string>
    <string name="choose_theme">Choose theme</string>
    <string name="settings_another_style">Another</string>
    <string name="settings_default_style">Default</string>
</resources>