<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/sky">

    <Button
        android:id="@+id/another_theme"
        android:layout_width="@dimen/another_theme_btn_width"
        android:layout_height="@dimen/another_theme_btn_height"
        android:text="@string/settings_another_style"
        android:backgroundTint="@color/settings_another_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/default_theme"
        android:layout_width="@dimen/default_theme_btn_width"
        android:layout_height="@dimen/default_theme_btn_height"
        android:text="@string/settings_default_style"
        android:backgroundTint="@color/settings_default_btn"
        app:layout_constraintBottom_toTopOf="@+id/another_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/settings_text_view"
        android:layout_width="@dimen/settings_text_view_width"
        android:layout_height="@dimen/settings_text_view_height"
        android:text="@string/choose_theme"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@color/settings_text_color"
        android:background="@color/settings_text_view"
        app:layout_constraintBottom_toTopOf="@+id/default_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>